build: fix java opts during unit tests