@@ -21,6 +21,7 @@
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
 		<maven-jar-plugin.version>2.4</maven-jar-plugin.version>
 		<exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
 		<build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
@@ -29,7 +30,7 @@
 		<async-http-client.version>1.9.37</async-http-client.version>
 		<httpclient.version>4.5.2</httpclient.version>
 		<google-http-client.version>1.21.0</google-http-client.version>
-        <okhttp.version>3.2.0</okhttp.version>
+		<okhttp.version>3.2.0</okhttp.version>
 		<jackson-2.version>2.7.3</jackson-2.version>
 		<jackson-1.version>1.9.13</jackson-1.version>
 		<gson.version>2.6.2</gson.version>
@@ -136,6 +137,15 @@
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
+				<configuration>
+					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
